# crimson-haskell

./: README.md  crimson.cabal
.stack-work/install/x86_64-linux-nopie/lts-10.5/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  HUnit-1.6.0.0-Co0VFs8PjIYJtvd3iwPPg  QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  SHA-1.6.4.2-1gNz0XEXVc9D2LWQ8o29zI  aeson-1.2.4.0-1uZbowWGPaSD5tIX45g9Fw  aeson-qq-0.8.2-DC9SkZzb1EuK9vbczHh1CQ  aeson-utils-0.3.0.2-CFYIYyv6PX9LqLC9PidnUx  ansi-terminal-0.7.1.1-83gYTJ4SUfw3TVZfePHzOW  ansi-wl-pprint-0.6.8.2-7bjT7kFOQ7uDBZhgQJpAwy  appar-0.1.4-4hjiMZCExd3CrJSMoeXviI  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-F8Rzvs1ilSM8Y15FBcVomO  attoparsec-iso8601-1.0.0.0-CDXenRjvF64G8SiUEGlWqH  auto-update-0.1.4-DRogbfFYNQeJCAE3NJ8IZH  base-compat-0.9.3-915GC5pH10BBmcMnCvMsPA  base64-bytestring-1.0.0.1-8MlzMz2YH3lCqJ4GOwL1Be  basement-0.0.4-7pJikASNmAFFwadsMZ0ihV  blaze-builder-0.4.0.2-8u0JsnNi77k1DtjV0YEZQ0  blaze-html-0.9.0.1-1k6JwnTqrkZ3XB8EuJzxab  blaze-markup-0.8.2.0-8OzC7oNKEgOF0lxdXfr9SU  byteorder-1.0.4-C3RUhEkbWDI7bhRvbw5CmU  bytestring-builder-0.10.8.1.0-EDQdR3R0EemEMKmDJYWM6n  cabal-doctest-1.0.6-K34z9qJFa9S9lhohNycUoO  call-stack-0.1.0-BVjoAlBRe9FCSr5eFfllei  case-insensitive-1.2.0.10-8fWCn0YU2LFH0JYJwGUzuj  clock-0.7.2-7eenmRf30tW97adCwu2PN3  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  conduit-1.2.13-1QGhzWy66O23I6D8zFw7bC  cookie-0.4.3-9kqDbJ83mh7Ds9jlg5TA8A  cpphs-1.20.8-1qmvK3BVF4WFswBJUdusug  crimson-0.1.0.0-3qRfX4hodKl5od5VHc4MEO  crimson-0.1.0.0-5W0gt1F1dNA1EaqLvzhfHO  crimson-0.1.0.0-6fyIdxFluFSDlcTeWfvxkk  crimson-0.1.0.0-97KqxAFCJcKICyWlOFRhvw  crimson-0.1.0.0-9Eg2BbaW9JjEkbtajx99H3  crimson-0.1.0.0-ABxDO2Djt1d18vVxtAKdCF  crimson-0.1.0.0-BUGlH5qrvAIAz6Q97GTlkq  crimson-0.1.0.0-DlupUUYfsqvAFfE4y6iaWx  crimson-0.1.0.0-EYsIvSSYUd83mJsaD4NpPE  crimson-0.1.0.0-EsM6xdKowjs9hDNNe4H1PR  (+98 more)
.stack-work/install/x86_64-linux-nopie/lts-10.5/8.2.2/pkgdb/: crimson-0.1.0.0-ZgWOCOdOiY63Gd2yNM7cG.conf  package.cache
app/: Main.hs
src/: Helper.hs  Lib.hs  Parser.hs  State.hs
src/game/: Player.hs
test/: Spec.hs
(+51 files in other folders)
