name:                crimson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/crimson#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , State
                     , Parser
                     , Helper
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , clock
                     , warp
                     , bytestring
                     , stm
                     , websockets
                     , transformers
                     , text
                     , conduit
                     , scientific
                     , aeson-utils
                     , time
                     , containers
                     , hashmap
                     , unordered-containers
                     , servant-websockets
                     , vector

  default-language:    Haskell2010

executable crimson-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crimson
  default-language:    Haskell2010

test-suite crimson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crimson
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crimson
